# synavate_utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build_utils.yml  lint_poetry.yml
blog/: .gitignore
cicd/circleci/: config.yml  configbak.yml.bak
db/chroma/: split_store_load.py  vec_query.py
db/mongodb-with-fastapi/: app.py
generate-tests/: .gitignore  pyproject.toml
generate-tests/generate_tests/: config.json  generate_tests.py  prompt_examples.py
generate-tests/scripts/: generate_tests.py
generate-tests/tests/: test_gen_tests.py
github/: lint.yml
github/new/: template.py
py/decorators/: example.py  template.py
py/functions/: json_w_pydantic.py
rs/logging/logging/: Cargo.toml
rs/logging/logging/src/: main.rs
scripts/: folders.zsh
src/: .gitignore
src/autodoc_generator/: README.md
src/blog/: generate_blog.py
src/db/chroma/: main.py
src/docker/: .Dockerignore  Streamlit_Dockerfile
src/github/new/: git_template.md  template.py
src/logs/logger/: logger copy.py  logger.py  logging_config.yaml  logging_config.yaml.bak
src/priv/PII_Removal/: remove.py
src/py/: gcp.py
src/py/formatting/: misc_formatting_etc.py
src/py/functions/: json_enforce.py
src/py/jenny/: st_app_streaming.py  streaming_lib.py
src/py/middlewares/: cors.py
src/py/middlewares/auth/: JWT_tokens.py
src/rs/db/: db.rs
src/synutils/: main.py
