[tool.poetry]
name = "generate-tests"
version = "0.1.0"
description = "Generates tests for utils"
authors = ["orionhunts-ai <orion@oriondefensiveai.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.14"
anthropic = "^0.31.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^1.0.0"
isort = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
